--- a/formV3.html
+++ b/formV3.html
@@ -11,64 +11,73 @@
 <body>
     <h1>Create and Download a File</h1>
     <form class="w-full max-w-lg mx-auto p-4" method="POST">
+
+
+        <!-- Onboarding ticket info -->
+        <div class="mb-4">
+            <label for="TicketID" class="block text-sm font-medium text-gray-700">Onboarding Ticket ID:</label>
+            <input type="text" id="TicketID" name="TicketID" class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="2043" required>
+        </div>
+
+
         <!-- Company Info -->
         <div class="mb-4">
             <label for="companyName" class="block text-sm font-medium text-gray-700">Company Name:</label>
-            <input type="text" id="companyName" name="companyName" class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+            <input type="text" id="companyName" name="companyName" class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="Company 8" required>
         </div>
         <div class="mb-4">
             <label for="companyAddress" class="block text-sm font-medium text-gray-700">Company Address:</label>
-            <input type="text" id="companyAddress" name="companyAddress" class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+            <input type="text" id="companyAddress" name="companyAddress" class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="123 address goes here" required>
         </div>
 
         <!-- Main Contact Info -->
         <div class="mb-4">
             <label for="mainContactFirstName" class="block text-sm font-medium text-gray-700">Main Contact First Name:</label>
             <input type="text" id="mainContactFirstName" name="mainContactFirstName"
-                class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+                class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="Jack" required>
         </div>
         <div class="mb-4">
             <label for="mainContactLastName" class="block text-sm font-medium text-gray-700">Main Contact Last Name:</label>
             <input type="text" id="mainContactLastName" name="mainContactLastName"
-                class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+                class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="Smith" required>
         </div>
         <div class="mb-4">
             <label for="mainContactEmail" class="block text-sm font-medium text-gray-700">Main Contact Email:</label>
             <input type="email" id="mainContactEmail" name="mainContactEmail"
-                class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+                class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="JackS@Email.com" required>
         </div>
         <div class="mb-4">
             <label for="mainContactPhoneNumber" class="block text-sm font-medium text-gray-700">Phone Number:</label>
             <input type="text" id="mainContactPhoneNumber" name="mainContactPhoneNumber"
-                class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+                class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="09 321 5432" required>
         </div>
         <div class="mb-4">
             <label for="mainContactMobileNumber" class="block text-sm font-medium text-gray-700">Mobile Number:</label>
             <input type="text" id="mainContactMobileNumber" name="mainContactMobileNumber"
-                class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+                class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="027 456 7890" required>
         </div>
         <div class="mb-4">
             <label for="mainContactUsername" class="block text-sm font-medium text-gray-700">Username:</label>
             <input type="text" id="mainContactUsername" name="mainContactUsername"
-                class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+                class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="Admin123" required>
         </div>
         <div class="mb-4">
             <label for="mainContactPassword" class="block text-sm font-medium text-gray-700">Password:</label>
             <input type="password" id="mainContactPassword" name="mainContactPassword"
-                class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+                class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="Pw1231231!" required>
         </div>
 
-                <!-- Company Details -->
-                <div class="mb-4">
-                    <label for="isMTA" class="block text-sm font-medium text-gray-700">Is MTA:</label>
-                    <input type="checkbox" id="isMTA" name="isMTA" class="mt-1 p-2 border border-gray-300 rounded-md">
-                </div>
+        <!-- Company Details -->
+        <div class="mb-4">
+            <label for="isMTA" class="block text-sm font-medium text-gray-700">Is MTA:</label>
+            <input type="checkbox" id="isMTA" name="isMTA" class="mt-1 p-2 border border-gray-300 rounded-md">
+        </div>
 
 
         <!-- Number of Employees -->
         <div class="mb-4">
             <label for="numberOfEmployees" class="block text-sm font-medium text-gray-700">Number of Employees:</label>
-            <input type="number" id="numberOfEmployees" name="numberOfEmployees" min="1" value="1" max="9" class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+            <input type="number" id="numberOfEmployees" name="numberOfEmployees" min="1" value="1" max="9" class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="John" required>
         </div>
 
         <!-- Employee Fields -->
@@ -94,15 +103,15 @@
                     employeeDiv.innerHTML = `
                         <div class="mb-4">
                             <label for="employee${i}Name" class="block text-sm font-medium text-gray-700">Employee ${i} Name:</label>
-                            <input type="text" id="employee${i}Name" name="employee${i}Name" class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+                            <input type="text" id="employee${i}Name" name="employee${i}Name" class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="John P" required>
                         </div>
                         <div class="mb-4">
                             <label for="employee${i}Email" class="block text-sm font-medium text-gray-700">Employee ${i} Email:</label>
-                            <input type="email" id="employee${i}Email" name="employee${i}Email" class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+                            <input type="email" id="employee${i}Email" name="employee${i}Email" class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="JohnP@Email.com" required>
                         </div>
                         <div class="mb-4">
                             <label for="employee${i}Department" class="block text-sm font-medium text-gray-700">Employee ${i} Department:</label>
-                            <input type="text" id="employee${i}Department" name="employee${i}Department" class="mt-1 p-2 w-full border border-gray-300 rounded-md" required>
+                            <input type="text" id="employee${i}Department" name="employee${i}Department" class="mt-1 p-2 w-full border border-gray-300 rounded-md" value="Johns Department" required>
                         </div>
                         <div class="mb-4">
                             <label for="employee${i}IsManager" class="block text-sm font-medium text-gray-700">Employee ${i} Is Manager:</label>
@@ -132,6 +141,8 @@
                 method: "POST",
                 headers: myHeaders,
                 body: JSON.stringify({
+                    "TicketID": e.target.TicketID.value,
+
                     "companyName": e.target.companyName.value,
                     "companyAddress": e.target.companyAddress.value,
                     "mainContactFirstName": e.target.mainContactFirstName.value,
