--- a/formV3.html
+++ b/formV3.html
@@ -49,20 +49,11 @@
         <h5 class="text-xl dark:text-white text-center p-3">Company Information</h5>
         <div class="border p-3" >
 
-            <!-- <div class="relative">
-                <label for="companyName" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white dark:bg-gray-900 px-2 peer-focus:px-2 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1">Company Name:</label>
-                <input placeholder=" "  type="text" id="companyName" name="companyName" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" value="Company 8" required>
-            </div> -->
             <div class="relative my-3">
                 <input value="Company 8" type="text" id="companyName" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " />
                 <label for="companyName" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white dark:bg-gray-900 px-2 peer-focus:px-2 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1">Company Name:</label>
             </div>
 
-
-            <!-- <div class="relative">
-                <label for="companyAddress" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white dark:bg-gray-900 px-2 peer-focus:px-2 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1">Company Address:</label>
-                <input placeholder=" "  type="text" id="companyAddress" name="companyAddress" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" value="123 address goes here" required>
-            </div> -->
             <div class="relative my-3">
                 <input value="123 address goes here" type="text" id="companyAddress" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " />
                 <label for="companyAddress" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white dark:bg-gray-900 px-2 peer-focus:px-2 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1">Company Address:</label>
@@ -170,9 +161,15 @@
                     employeeDiv.classList.add('m-3');
                     employeeDiv.innerHTML = `
                         <div class="m-3" style="margin:10px">
-                            <label for="employee${i}Name" class="block text-sm font-medium text-gray-700 ">Employee ${i} Name:</label>
+                            <label for="employee${i}Name" class="block text-sm font-medium text-gray-700 ">Employee ${i} Display Name:</label>
                             <input type="text" id="employee${i}Name" name="employee${i}Name" class="mt-1 p-2 border border-gray-300 rounded-md" value="John P" required>
                         </div>
+
+                        <div class="m-3" style="margin:10px">
+                            <label for="employee${i}LoginName" class="block text-sm font-medium text-gray-700 ">Employee ${i} Login Name:</label>
+                            <input type="text" id="employee${i}LoginName" name="employee${i}LoginName" class="mt-1 p-2 border border-gray-300 rounded-md" value="J1 i dont have an email" required>
+                        </div>
+
                         <div class="m-3" style="margin:10px">
                             <label for="employee${i}Email" class="block text-sm font-medium text-gray-700 ">Employee ${i} Email:</label>
                             <input type="email" id="employee${i}Email" name="employee${i}Email" class="mt-1 p-2 border border-gray-300 rounded-md" value="JohnP@Email.com" required>
@@ -213,7 +210,7 @@
                     "Environment" : e.target.environmentRadio1.checked?"Preview":"Production",
 
                     "companyName": e.target.companyName.value,
-                    "companyAddress": e.target.companyAddress.value,
+                    "companyAddress": e.target.companyAddress.value, 
                     "mainContactFirstName": e.target.mainContactFirstName.value,
                     "mainContactLastName": e.target.mainContactLastName.value,
                     "mainContactEmail": e.target.mainContactEmail.value,
@@ -225,46 +222,55 @@
                     "numberOfEmployees": e.target.numberOfEmployees.value,
 
                     "employee1Name": e.target.numberOfEmployees.value > 0 ?  e.target.employee1Name.value : null,
+                    "employee1LoginName": e.target.numberOfEmployees.value > 0 ?  e.target.employee1LoginName.value : null,
                     "employee1Email": e.target.numberOfEmployees.value > 0 ?  e.target.employee1Email.value : null,
                     "employee1Department": e.target.numberOfEmployees.value > 0 ?  e.target.employee1Department.value : null,
                     "employee1IsManager": e.target.numberOfEmployees.value > 0 ?  e.target.employee1IsManager.checked : null,
 
                     "employee2Name": e.target.numberOfEmployees.value > 1 ?  e.target.employee2Name.value : null,
+                    "employee2LoginName": e.target.numberOfEmployees.value > 1 ?  e.target.employee2LoginName.value : null,
                     "employee2Email": e.target.numberOfEmployees.value > 1 ?  e.target.employee2Email.value : null,
                     "employee2Department": e.target.numberOfEmployees.value > 1 ?  e.target.employee2Department.value : null,
                     "employee2IsManager": e.target.numberOfEmployees.value > 1 ?  e.target.employee2IsManager.checked : null,
 
                     "employee3Name": e.target.numberOfEmployees.value > 2 ? e.target.employee3Name.value : null,
+                    "employee3LoginName": e.target.numberOfEmployees.value > 2 ? e.target.employee3LoginName.value : null,
                     "employee3Email": e.target.numberOfEmployees.value > 2 ? e.target.employee3Email.value : null,
                     "employee3Department": e.target.numberOfEmployees.value > 2 ? e.target.employee3Department.value : null,
                     "employee3IsManager": e.target.numberOfEmployees.value > 2 ? e.target.employee3IsManager.checked : null,
 
                     "employee4Name": e.target.numberOfEmployees.value > 3 ?  e.target.employee4Name.value : null,
+                    "employee4LoginName": e.target.numberOfEmployees.value > 3 ?  e.target.employee4LoginName.value : null,
                     "employee4Email": e.target.numberOfEmployees.value > 3 ?  e.target.employee4Email.value : null,
                     "employee4Department": e.target.numberOfEmployees.value > 3 ?  e.target.employee4Department.value : null,
                     "employee4IsManager": e.target.numberOfEmployees.value > 3 ?  e.target.employee4IsManager.checked : null,
 
                     "employee5Name": e.target.numberOfEmployees.value > 4 ?  e.target.employee5Name.value : null,
+                    "employee5LoginName": e.target.numberOfEmployees.value > 4 ?  e.target.employee5LoginName.value : null,
                     "employee5Email": e.target.numberOfEmployees.value > 4 ?  e.target.employee5Email.value : null,
                     "employee5Department": e.target.numberOfEmployees.value > 4 ?  e.target.employee5Department.value : null,
                     "employee5IsManager": e.target.numberOfEmployees.value > 4 ?  e.target.employee5IsManager.checked : null,
 
                     "employee6Name": e.target.numberOfEmployees.value > 5 ? e.target.employee6Name.value : null,
+                    "employee6LoginName": e.target.numberOfEmployees.value > 5 ? e.target.employee6LoginName.value : null,
                     "employee6Email": e.target.numberOfEmployees.value > 5 ? e.target.employee6Email.value : null,
                     "employee6Department": e.target.numberOfEmployees.value > 5 ? e.target.employee6Department.value : null,
                     "employee6IsManager": e.target.numberOfEmployees.value > 5 ? e.target.employee6IsManager.checked : null,
 
                     "employee7Name": e.target.numberOfEmployees.value > 6 ?  e.target.employee7Name.value : null,
+                    "employee7LoginName": e.target.numberOfEmployees.value > 6 ?  e.target.employee7LoginName.value : null,
                     "employee7Email": e.target.numberOfEmployees.value > 6 ?  e.target.employee7Email.value : null,
                     "employee7Department": e.target.numberOfEmployees.value > 6 ?  e.target.employee7Department.value : null,
                     "employee7IsManager": e.target.numberOfEmployees.value > 6 ?  e.target.employee7IsManager.checked : null,
 
                     "employee8Name": e.target.numberOfEmployees.value > 7 ?  e.target.employee8Name.value : null,
+                    "employee8LoginName": e.target.numberOfEmployees.value > 7 ?  e.target.employee8LoginName.value : null,
                     "employee8Email": e.target.numberOfEmployees.value > 7 ?  e.target.employee8Email.value : null,
                     "employee8Department": e.target.numberOfEmployees.value > 7 ?  e.target.employee8Department.value : null,
                     "employee8IsManager": e.target.numberOfEmployees.value > 7 ?  e.target.employee8IsManager.checked : null,
 
                     "employee9Name": e.target.numberOfEmployees.value > 8 ? e.target.employee9Name.value : null,
+                    "employee9LoginName": e.target.numberOfEmployees.value > 8 ? e.target.employee9LoginName.value : null,
                     "employee9Email": e.target.numberOfEmployees.value > 8 ? e.target.employee9Email.value : null,
                     "employee9Department": e.target.numberOfEmployees.value > 8 ? e.target.employee9Department.value : null,
                     "employee9IsManager": e.target.numberOfEmployees.value > 8 ? e.target.employee9IsManager.checked : null,
