removed submit button disable on submit

--- a/form.html
+++ b/form.html
@@ -229,7 +229,7 @@
             document.getElementById('startAutomationButton').innerHTML = "Running Automation"
             document.getElementById('startAutomationButton').style.backgroundColor = "red"
             document.getElementById('startAutomationButton').style.fontSize = "13px"
-            document.getElementById('startAutomationButton').disabled = true
+            // document.getElementById('startAutomationButton').disabled = true
 
 
             const myHeaders = new Headers();
